--- a/articles/cloud-services-extended-support/toc.yml
+++ b/articles/cloud-services-extended-support/toc.yml
@@ -16,8 +16,10 @@
       href: deploy-powershell.md
     - name: クラウド サービスのデプロイ - テンプレート
       href: deploy-template.md
+    - name: クラウド サービスのデプロイ - SDK
+      href: deploy-sdk.md
     - name: クラウド サービスのデプロイ - Visual Studio
-      href: deploy-visual-studio.md
+      href: 'https://docs.microsoft.com/visualstudio/azure/cloud-services-extended-support?context=/azure/cloud-services-extended-support/context/context'
   expanded: true
 - name: 概念
   items:
@@ -26,11 +28,11 @@
     - name: 使用可能な VVM のサイズ
       href: available-sizes.md
     - name: ゲスト OS の修正プログラム
-      href: ../cloud-services/cloud-services-guestos-msrc-releases.md?toc=/azure/cloud-services-extended-support/toc.json&bc=/azure/cloud-services-extended-support/breadcrumb/toc.json
+      href: ../cloud-services/cloud-services-guestos-msrc-releases.md?context=/azure/cloud-services-extended-support/context/context
     - name: ゲスト OS の提供終了
-      href: ../cloud-services/cloud-services-guestos-retirement-policy.md?toc=/azure/cloud-services-extended-support/toc.json&bc=/azure/cloud-services-extended-support/breadcrumb/toc.json
+      href: ../cloud-services/cloud-services-guestos-retirement-policy.md?context=/azure/cloud-services-extended-support/context/context
     - name: ゲスト OS のリリース ニュース
-      href: ../cloud-services/cloud-services-guestos-update-matrix.md?toc=/azure/cloud-services-extended-support/toc.json&bc=/azure/cloud-services-extended-support/breadcrumb/toc.json
+      href: ../cloud-services/cloud-services-guestos-update-matrix.md?context=/azure/cloud-services-extended-support/context/context
     - name: XML スキーマ
       items:
         - name: Csdef XML スキーマ
@@ -65,6 +67,8 @@
       href: certificates-and-key-vault.md
 - name: サンプル
   items:
+    - name: サンプル テンプレート
+      href: 'https://github.com/Azure-Samples/cloud-services-extended-support'
     - name: 新しいクラウド サービスを作成します。
       href: sample-create-cloud-service.md
     - name: クラウド サービスの詳細を取得する
@@ -83,6 +87,8 @@
       href: 'https://docs.microsoft.com/azure/templates/microsoft.compute/cloudservices'
     - name: REST
       href: 'https://docs.microsoft.com/rest/api/compute/cloudservices'
+    - name: .NET
+      href: 'https://docs.microsoft.com/dotnet/api/overview/azure/virtualmachines/management?view=azure-dotnet-preview'
     - name: SDK
       href: 'https://www.nuget.org/packages/Microsoft.Azure.Management.Compute/43.0.0-preview'
 - name: リソース
