--- a/articles/data-factory/TOC.yml
+++ b/articles/data-factory/TOC.yml
@@ -796,6 +796,10 @@
       href: /python/api/overview/azure/datafactory
 - name: リソース
   items:
+    - name: データ フロー予約容量の概要
+      href: data-flow-reserved-capacity-overview.md
+    - name: データ フローの予約料金について
+      href: data-flow-understand-reservation-charges.md
     - name: ホワイトペーパー
       href: whitepapers.md
     - name: よく寄せられる質問
