--- a/articles/lighthouse/index.yml
+++ b/articles/lighthouse/index.yml
@@ -9,13 +9,13 @@ metadata:
   ms.collection: collection
   author: JnHs
   ms.author: jenhayes
-  ms.date: 12/17/2020
-  ms.openlocfilehash: ad312bd1a1797ee6f9e2d474e93d066b4be9c131
-  ms.sourcegitcommit: 52e3d220565c4059176742fcacc17e857c9cdd02
+  ms.date: 01/26/2021
+  ms.openlocfilehash: 08c6275a9202f8d52e4e3f72f18822633cd113bc
+  ms.sourcegitcommit: aaa65bd769eb2e234e42cfb07d7d459a2cc273ab
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 01/21/2021
-  ms.locfileid: "98661752"
+  ms.lasthandoff: 01/27/2021
+  ms.locfileid: "98881773"
 landingContent:
 - title: Azure Lighthouse について
   linkLists:
@@ -35,6 +35,8 @@ landingContent:
     links:
     - text: Azure Lighthouse への顧客のオンボード
       url: ./how-to/onboard-customer.md
+    - text: 顧客を表示し、管理する
+      url: ./how-to/view-manage-customers.md
     - text: パートナー ID をリンクする
       url: ./how-to/partner-earned-credit.md
   - linkListType: concept
@@ -59,6 +61,14 @@ landingContent:
     links:
     - text: Azure Marketplace のマネージド サービス オファー
       url: ./concepts/managed-services-offers.md
+- title: カスタマー エクスペリエンス
+  linkLists:
+  - linkListType: how-to-guide
+    links:
+    - text: サービス プロバイダーを表示し、管理する
+      url: ./how-to/view-manage-service-providers.md
+    - text: サービス プロバイダーのアクティビティを表示する
+      url: ./how-to/view-service-provider-activity.md
 - title: サンプルとテンプレート
   linkLists:
   - linkListType: deploy
@@ -67,14 +77,6 @@ landingContent:
       url: https://github.com/Azure/Azure-Lighthouse-samples/
     - text: Azure Lighthouse サンプルのインデックス
       url: ./samples/index.md
-- title: Azure portal エクスペリエンス
-  linkLists:
-  - linkListType: how-to-guide
-    links:
-    - text: 顧客を表示し、管理する
-      url: ./how-to/view-manage-customers.md
-    - text: サービス プロバイダーを表示し、管理する
-      url: ./how-to/view-manage-service-providers.md
 - title: 大規模な Azure サービスの操作
   linkLists:
   - linkListType: how-to-guide
