--- a/articles/data-lake-analytics/index.yml
+++ b/articles/data-lake-analytics/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: hrasheed-msft
   ms.author: hrasheed
   ms.date: 09/13/2019
-  ms.openlocfilehash: 014dbc3b2337238604cfd585ee1d39c4e8dab85b
-  ms.sourcegitcommit: df66dff4e34a0b7780cba503bb141d6b72335a96
+  ms.openlocfilehash: a2c2c992d717d22fbd5b9b45003a947102174dfa
+  ms.sourcegitcommit: 2f9f306fa5224595fa5f8ec6af498a0df4de08a8
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 12/02/2020
-  ms.locfileid: "96511374"
+  ms.lasthandoff: 01/28/2021
+  ms.locfileid: "98928374"
 landingContent:
 - title: Data Lake Analytics について
   linkLists:
@@ -40,7 +40,7 @@ landingContent:
     - text: U-SQL を使ってみる
       url: data-lake-analytics-u-sql-get-started.md
     - text: U-SQL 言語のリファレンス
-      url: https://docs.microsoft.com/u-sql
+      url: /u-sql
     - text: U-SQL カタログの概要
       url: data-lake-analytics-u-sql-catalog.md
     - text: ユーザー定義演算子を使用する
