--- a/articles/azure-app-configuration/TOC.yml
+++ b/articles/azure-app-configuration/TOC.yml
@@ -104,6 +104,8 @@
           href: overview-managed-identity.md
         - name: セキュリティ ベースライン
           href: security-baseline.md
+        - name: Azure Policy によるセキュリティ制御
+          href: ./security-controls-policy.md
     - name: 高可用性
       items:
         - name: 回復性とディザスター リカバリー
