--- a/articles/service-bus-messaging/TOC.yml
+++ b/articles/service-bus-messaging/TOC.yml
@@ -210,14 +210,20 @@
               href: service-bus-auto-forwarding.md
             - name: トランザクション処理
               href: service-bus-transactions.md
-        - name: エンドツーエンドのトレースと診断
-          href: service-bus-end-to-end-tracing.md
         - name: 多層 Service Bus アプリケーションを構築する
           href: service-bus-dotnet-multi-tier-app-using-service-bus-queues.md
     - name: 移行
       items:
         - name: ActiveMQ から Azure Service Bus への移行
           href: migrate-jms-activemq-to-servicebus.md
+    - name: Monitor
+      items:
+        - name: エンドツーエンドのトレースと診断
+          href: service-bus-end-to-end-tracing.md
+        - name: 診断ログ
+          href: service-bus-diagnostic-logs.md
+        - name: Azure Monitor のメトリック
+          href: service-bus-metrics-azure-monitor.md
     - name: 統合
       items:
         - name: RabbitMQ との統合
@@ -228,12 +234,8 @@
           href: automate-update-messaging-units.md
         - name: Azure PowerShell を使用したエンティティのプロビジョニング
           href: service-bus-manage-with-ps.md
-        - name: Azure Monitor による Service Bus の監視
-          href: service-bus-metrics-azure-monitor.md
         - name: Service Bus 管理ライブラリ
           href: service-bus-management-libraries.md
-        - name: リソース ログ
-          href: service-bus-diagnostic-logs.md
         - name: メッセージ エンティティの一時停止と再アクティブ化
           href: entity-suspend.md
         - name: Service Bus Explorer を使用して Service Bus に対するデータ操作を実行する
