--- a/articles/attestation/index.yml
+++ b/articles/attestation/index.yml
@@ -1,5 +1,5 @@
 ### YamlMime:Landing
-title: Microsoft Azure Attestation (プレビュー)
+title: Microsoft Azure Attestation
 summary: Azure Attestation の使用方法について説明します
 metadata:
   title: Azure Attestation のドキュメント
@@ -10,12 +10,12 @@ metadata:
   author: msmbaldwin
   ms.author: mbaldwin
   ms.date: 07/20/2020
-  ms.openlocfilehash: 9740c315333d3f24e43a35b476243f323b6e3821
-  ms.sourcegitcommit: f5b8410738bee1381407786fcb9d3d3ab838d813
+  ms.openlocfilehash: 47e1a1cc838a7d8153c8dbea71a0aae576166f2e
+  ms.sourcegitcommit: b4e6b2627842a1183fce78bce6c6c7e088d6157b
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 01/14/2021
-  ms.locfileid: "98209918"
+  ms.lasthandoff: 01/30/2021
+  ms.locfileid: "99093544"
 landingContent:
 - title: Microsoft Azure Attestation について
   linkLists:
