--- a/articles/confidential-computing/index.yml
+++ b/articles/confidential-computing/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: JBCook
   ms.author: jencook
   ms.date: 09/22/2020
-  ms.openlocfilehash: 0d3a800b376edfe7f5c9380fd5b198d4a46362e6
-  ms.sourcegitcommit: 7dacbf3b9ae0652931762bd5c8192a1a3989e701
+  ms.openlocfilehash: e4e9819820b9ebd711dc6789d43fd9bbd83d1b8a
+  ms.sourcegitcommit: b4e6b2627842a1183fce78bce6c6c7e088d6157b
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/16/2020
-  ms.locfileid: "92124345"
+  ms.lasthandoff: 01/30/2021
+  ms.locfileid: "99096679"
 landingContent:
 - title: Azure のコンフィデンシャル コンピューティングについて
   linkLists:
@@ -86,7 +86,7 @@ landingContent:
     - text: 機密コンテナーのサンプル (SGX 上の未変更のコンテナー)
       url: https://github.com/Azure-Samples/confidential-container-samples
     - text: エンクレーブ対応コンテナーのサンプル
-      url: https://github.com/Azure-Samples/enclave-aware-container-samples
+      url: https://github.com/MicrosoftDocs/azure-docs/blob/master/articles/confidential-computing/enclave-aware-containers.md
   - linkListType: reference
     links:
     - text: AKS 上の機密ノードに関する FAQ
@@ -108,7 +108,7 @@ landingContent:
     - text: AKS での機密医療のデモ
       url: https://github.com/Azure-Samples/confidential-container-samples
     - text: AKS 上で Open Enclave を使用して構成証明された相互 TLS
-      url: https://github.com/Azure-Samples/enclave-aware-container-samples
+      url: https://github.com/MicrosoftDocs/azure-docs/blob/master/articles/confidential-computing/enclave-aware-containers.md
   - linkListType: reference
     links:
     - text: Open Enclave (OE) SDK
