--- a/articles/virtual-machines/index.yml
+++ b/articles/virtual-machines/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: cynthn
   ms.author: cynthn
   ms.date: 11/05/2020
-  ms.openlocfilehash: 2672ad70ad76e12870a2a176331e58579443b952
-  ms.sourcegitcommit: 75041f1bce98b1d20cd93945a7b3bd875e6999d0
+  ms.openlocfilehash: a3b96f5ffb2bd9be758d08b53032eedf12836c92
+  ms.sourcegitcommit: b4e6b2627842a1183fce78bce6c6c7e088d6157b
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 01/22/2021
-  ms.locfileid: "98702089"
+  ms.lasthandoff: 01/30/2021
+  ms.locfileid: "99091062"
 landingContent:
 - title: 最新の機能
   linkLists:
@@ -66,7 +66,7 @@ landingContent:
     - text: Linux VM が起動しない
       url: ./troubleshooting/boot-error-troubleshoot-linux.md
     - text: Windows VM が起動しない
-      url: /troubleshooting/boot-error-troubleshoot.md
+      url: /azure/virtual-machines/troubleshooting/boot-error-troubleshoot
     - text: Microsoft Q&A
       url: /answers/topics/azure-virtual-machines.html
 - title: リソース
