--- a/articles/virtual-network/index.yml
+++ b/articles/virtual-network/index.yml
@@ -10,13 +10,13 @@ metadata:
   ms.collection: collection
   author: KumudD
   ms.author: kumud
-  ms.date: 08/28/2019
-  ms.openlocfilehash: 7bf639fb7bc89ec218b280bcf7d02c76c7bde277
-  ms.sourcegitcommit: d59abc5bfad604909a107d05c5dc1b9a193214a8
+  ms.date: 01/28/2021
+  ms.openlocfilehash: 11e3de57bdf2853e94ec61a21ab54ae085f4f6b1
+  ms.sourcegitcommit: 1a98b3f91663484920a747d75500f6d70a6cb2ba
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 01/14/2021
-  ms.locfileid: "98223603"
+  ms.lasthandoff: 01/29/2021
+  ms.locfileid: "99062148"
 landingContent:
 - title: Virtual Network について
   linkLists:
@@ -27,7 +27,7 @@ landingContent:
   - linkListType: concept
     links:
     - text: 仮想ネットワークに関する FAQ
-      url: virtual-networks-overview.md
+      url: virtual-networks-faq.md
 - title: はじめに
   linkLists:
   - linkListType: quickstart
