--- a/articles/databox-gateway/TOC.yml
+++ b/articles/databox-gateway/TOC.yml
@@ -50,19 +50,21 @@
         - name: トラブルシューティング
           href: data-box-gateway-troubleshoot.md
         - name: Microsoft サポートに問い合わせる
-          href: ../databox-online/azure-stack-edge-contact-microsoft-support.md?toc=/azure/databox-online/toc.json&bc=/azure/databox-gateway/breadcrumb/toc.json
-- name: リリース ノート
-  items:
-    - name: 2007 - 最新
-      href: data-box-gateway-2007-release-notes.md
-    - name: 1911
-      href: data-box-gateway-1911-release-notes.md
-    - name: 1906
-      href: data-box-gateway-1906-release-notes.md
-    - name: 1905
-      href: data-box-gateway-1905-release-notes.md
-    - name: 一般公開 (GA)
-      href: data-box-gateway-release-notes.md
+          href: ../databox-online/azure-stack-edge-contact-microsoft-support.md
+    - name: リリース ノート
+      items:
+        - name: 2101 - 最新
+          href: data-box-gateway-2101-release-notes.md
+        - name: 2007
+          href: data-box-gateway-2007-release-notes.md
+        - name: 1911
+          href: data-box-gateway-1911-release-notes.md
+        - name: 1906
+          href: data-box-gateway-1906-release-notes.md
+        - name: 1905
+          href: data-box-gateway-1905-release-notes.md
+        - name: 一般公開 (GA)
+          href: data-box-gateway-release-notes.md
 - name: リソース
   items:
     - name: 価格
