--- a/articles/key-vault/managed-hsm/toc.yml
+++ b/articles/key-vault/managed-hsm/toc.yml
@@ -9,6 +9,8 @@
   items:
     - name: CLI
       href: quick-create-cli.md
+    - name: PowerShell
+      href: quick-create-powershell.md
     - name: Azure Resource Manager テンプレート
       href: quick-create-template.md
 - name: チュートリアル
