--- a/articles/logic-apps/toc.yml
+++ b/articles/logic-apps/toc.yml
@@ -57,6 +57,14 @@
           href: security-baseline.md
 - name: 操作方法ガイド
   items:
+    - name: Azure Logic Apps プレビュー
+      items:
+        - name: Azure Logic Apps プレビューの概要
+          href: logic-apps-overview-preview.md
+        - name: ステートフルとステートレス ワークフローの作成 - Azure portal
+          href: create-stateful-stateless-workflows-azure-portal.md
+        - name: ステートフルとステートレス ワークフローの作成 - Visual Studio Code
+          href: create-stateful-stateless-workflows-visual-studio-code.md
     - name: 開発
       items:
         - name: あらかじめ用意されているテンプレートから作成する
@@ -67,14 +75,6 @@
           href: logic-apps-move-from-mabs.md
         - name: Power Automate からフローをエクスポートして Azure Logic Apps にデプロイする
           href: export-from-microsoft-flow-logic-app-template.md
-        - name: Azure Logic Apps プレビュー
-          items:
-            - name: Azure Logic Apps プレビューの概要
-              href: logic-apps-overview-preview.md
-            - name: ステートフルとステートレス ワークフローの作成 - Azure portal
-              href: create-stateful-stateless-workflows-azure-portal.md
-            - name: ステートフルとステートレス ワークフローの作成 - Visual Studio Code
-              href: create-stateful-stateless-workflows-visual-studio-code.md
         - name: Power Automate と Power Apps からロジック アプリを呼び出す
           href: call-from-power-automate-power-apps.md
         - name: ワークフローの実行のコントロール
@@ -330,6 +330,8 @@
           href: logic-apps-enterprise-integration-create-integration-account.md
         - name: 統合サービス環境を管理する
           href: ise-manage-integration-service-environment.md
+        - name: コストの計画と管理
+          href: plan-manage-costs.md
         - name: ロジック アプリのリソースを移動する
           href: move-logic-app-resources.md
         - name: 最新のスキーマに移行する
